hero photo align fixed

--- a/00-my-react-projects/src/components/Landing/Landing.css
+++ b/00-my-react-projects/src/components/Landing/Landing.css
@@ -226,7 +226,7 @@
 		text-align: left;
 	}
 	.landing-photo-section {
-		align-items: flex-end;
+		/* align-items: flex-end; */
 		width: 50%;
 		border-color: transparent;
 		right: -100%;
